--- a/sentinel_backend/pyproject.toml
+++ b/sentinel_backend/pyproject.toml
@@ -21,6 +21,7 @@ alembic = "^1.11.1" # For database migrations
 # API Spec Parsing
 prance = "^2.0.0"
 openapi-core = "^0.18.0"
+pyyaml = "^6.0"
 
 # Testing
 pytest = "^7.4.0"
