Update .gitignore to exclude Node.js dependencies
- Add node_modules/ to prevent committing npm packages
- Add npm and yarn debug logs to ignore list
- Add frontend build artifacts (build/, dist/, .next/, out/)
- Add package lock files (optional exclusion)
- Ensure clean repository without unnecessary dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,21 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# Frontend build artifacts
+build/
+dist/
+.next/
+out/
+
+# Package lock files (optional - some teams prefer to commit these)
+package-lock.json
+yarn.lock
