Phase 5: Complete RBAC Implementation
- Added comprehensive JWT-based authentication service with user management
- Implemented four-tier role system (Admin, Manager, Tester, Viewer) with granular permissions
- Created reusable authentication middleware for FastAPI services
- Integrated RBAC into API Gateway with protected endpoints
- Added user CRUD operations with role assignment and profile management
- Implemented secure password handling with bcrypt hashing
- Created comprehensive RBAC demo script (demo_rbac.py)
- Updated Docker configuration and service dependencies
- Added authentication dependencies to pyproject.toml
- Updated memory bank files (progress.md, activeContext.md)
- Enhanced README.md with RBAC documentation and authentication guide
- Updated .clinerules with RBAC patterns and task completion protocol

Default admin credentials: admin@sentinel.com / admin123
Phase 5 now has only 1 remaining task: Production deployment documentation

--- a/sentinel_backend/docker-compose.yml
+++ b/sentinel_backend/docker-compose.yml
@@ -24,13 +24,23 @@ services:
     ports:
       - "8000:8000"
     depends_on:
+      - auth_service
       - spec_service
       - orchestration_service
       - data_service
     environment:
+      - AUTH_SERVICE_URL=http://auth_service:8005
       - SPEC_SERVICE_URL=http://spec_service:8001
       - ORCHESTRATION_SERVICE_URL=http://orchestration_service:8002
       - DATA_SERVICE_URL=http://data_service:8004
+
+  auth_service:
+    build: ./auth_service
+    container_name: sentinel_auth_service
+    ports:
+      - "8005:8000"
+    environment:
+      - JWT_SECRET_KEY=sentinel-jwt-secret-change-in-production
 
   spec_service:
     build: ./spec_service
