Major: Configuration modularization core infrastructure
✅ MAJOR PROGRESS: Configuration Modularization Initiative

**Core Infrastructure Completed:**
- All services updated to use centralized configuration
- All agents updated with configuration integration
- All Dockerfiles updated with environment variables
- Comprehensive documentation added to README.md

**Services Updated:**
- auth_service: Security settings, JWT, CORS, logging
- execution_service: Service URLs, timeouts, logging
- orchestration_service: Service URLs, timeouts, logging
- API Gateway: Already using centralized configuration
- CLI: Default URLs and timeouts centralized
- Frontend: Complete configuration system implemented

**Agents Updated:**
- data_mocking_agent: Mock data generation settings
- security_auth_agent: BOLA vectors, auth scenarios, timeouts
- security_injection_agent: Injection payloads, timeouts
- performance_planner_agent: Load test configurations
- functional_positive_agent: Test execution timeouts
- functional_negative_agent: Test execution timeouts
- functional_stateful_agent: Test execution timeouts

**Infrastructure Completed:**
- Pydantic BaseSettings configuration system
- Environment-specific config files (dev, test, prod, docker)
- Docker configuration with environment variables
- Network settings and port mappings centralized
- Security validation and type safety
- Comprehensive README.md configuration guide

**Remaining:** Testing config, additional docs, validation enhancements

--- a/sentinel_backend/auth_service/Dockerfile
+++ b/sentinel_backend/auth_service/Dockerfile
@@ -17,7 +17,7 @@ RUN pip install --no-cache-dir -e .
 COPY . .
 
 # Expose port
-EXPOSE 8000
+EXPOSE ${AUTH_SERVICE_PORT:-8000}
 
 # Run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "main:app", "--host", "${SENTINEL_NETWORK_HOST:-0.0.0.0}", "--port", "${AUTH_SERVICE_PORT:-8000}", "--reload"]
