--- a/sentinel_backend/auth_service/Dockerfile
+++ b/sentinel_backend/auth_service/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.10-slim
 
 WORKDIR /app
+ENV PYTHONPATH /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -8,16 +9,18 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements
-COPY ../pyproject.toml .
+COPY pyproject.toml .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -e .
+RUN pip install poetry
+RUN poetry config virtualenvs.create false && poetry install --no-root
 
 # Copy application code
-COPY . .
+COPY config/ /app/config
+COPY auth_service/ .
 
 # Expose port
 EXPOSE ${AUTH_SERVICE_PORT:-8000}
 
 # Run the application
-CMD ["uvicorn", "main:app", "--host", "${SENTINEL_NETWORK_HOST:-0.0.0.0}", "--port", "${AUTH_SERVICE_PORT:-8000}", "--reload"]
+CMD uvicorn main:app --host ${SENTINEL_NETWORK_HOST:-0.0.0.0} --port ${AUTH_SERVICE_PORT:-8000} --reload
