--- a/sentinel_backend/execution_service/Dockerfile
+++ b/sentinel_backend/execution_service/Dockerfile
@@ -3,18 +3,20 @@ FROM python:3.10-slim
 
 # Set the working directory in the container
 WORKDIR /app
+ENV PYTHONPATH /app
 
 # Install poetry
 RUN pip install poetry
 
 # Copy the dependency files to the working directory
-COPY ../pyproject.toml ./
+COPY pyproject.toml ./
 
 # Install project dependencies
-RUN poetry config virtualenvs.create false && poetry install --no-dev --no-root
+RUN poetry config virtualenvs.create false && poetry install --no-root
 
 # Copy the content of the local src directory to the working directory
-COPY . .
+COPY config/ /app/config
+COPY execution_service/ .
 
 # Command to run the application
-CMD ["uvicorn", "main:app", "--host", "${SENTINEL_NETWORK_HOST:-0.0.0.0}", "--port", "${EXECUTION_SERVICE_PORT:-8003}"]
+CMD uvicorn main:app --host ${SENTINEL_NETWORK_HOST:-0.0.0.0} --port ${EXECUTION_SERVICE_PORT:-8003}
