--- a/sentinel_backend/pyproject.toml
+++ b/sentinel_backend/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "Backend services for the Sentinel AI Agentic API Testing Platform"
 authors = ["Cline"]
 
+[[tool.poetry.packages]]
+include = "sentinel_backend"
+
 [tool.poetry.dependencies]
 python = "^3.10"
 
@@ -46,7 +49,7 @@ pydantic = {extras = ["email"], version = "^2.0.0"}
 pydantic-settings = "^2.0.0"
 Faker = "^22.0.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
