--- a/sentinel_backend/sentinel_rust_core/Cargo.toml
+++ b/sentinel_backend/sentinel_rust_core/Cargo.toml
@@ -10,6 +10,10 @@ actix-web = "4"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+async-trait = "0.1"
+rand = "0.8"
+uuid = { version = "1.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 # RUV Swarm Dependencies
 ruv-swarm-core = "0.2.0"
