--- a/sentinel_backend/.env.docker
+++ b/sentinel_backend/.env.docker
@@ -28,3 +28,9 @@ DATABASE_PORT=5432
 
 # Sentinel Configuration
 SENTINEL_ENVIRONMENT=docker
+
+# Observability Configuration
+SENTINEL_NETWORK_JAEGER_AGENT_HOST=jaeger
+SENTINEL_NETWORK_JAEGER_AGENT_PORT=6831
+SENTINEL_APP_TRACING_ENABLED=true
+SENTINEL_APP_METRICS_ENABLED=true
