--- a/sentinel_backend/pyproject.toml
+++ b/sentinel_backend/pyproject.toml
@@ -49,6 +49,15 @@ pydantic = {extras = ["email"], version = "^2.0.0"}
 pydantic-settings = "^2.0.0"
 Faker = "^22.0.0"
 
+# Observability
+structlog = "^23.1.0"
+python-json-logger = "^2.0.7"
+prometheus-fastapi-instrumentator = "^6.0.0"
+opentelemetry-api = "^1.18.0"
+opentelemetry-sdk = "^1.18.0"
+opentelemetry-exporter-jaeger = "^1.18.0"
+opentelemetry-instrumentation-fastapi = "^0.40b0"
+
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
 isort = "^5.12.0"
