--- a/sentinel_backend/.env.docker
+++ b/sentinel_backend/.env.docker
@@ -7,6 +7,10 @@ POSTGRES_PASSWORD=supersecretpassword
 POSTGRES_DB=sentinel_db
 DATABASE_URL=postgresql+asyncpg://sentinel:supersecretpassword@db/sentinel_db
 
+# RabbitMQ Configuration
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+
 # Service URLs (Docker internal networking)
 AUTH_SERVICE_URL=http://auth_service:8005
 SPEC_SERVICE_URL=http://spec_service:8001
