--- a/sentinel_backend/config/docker.env
+++ b/sentinel_backend/config/docker.env
@@ -25,6 +25,11 @@ SENTINEL_SERVICE_SERVICE_TIMEOUT=30
 SENTINEL_SERVICE_HEALTH_CHECK_TIMEOUT=5
 SENTINEL_SERVICE_HEALTH_CHECK_INTERVAL=30
 
+# Message Broker Settings
+SENTINEL_BROKER_URL=amqp://guest:guest@message_broker:5672/
+SENTINEL_BROKER_TASK_QUEUE_NAME=sentinel_task_queue
+SENTINEL_BROKER_RESULT_QUEUE_NAME=sentinel_result_queue
+
 # Security Settings
 SENTINEL_SECURITY_JWT_SECRET_KEY=sentinel-docker-secret-key-change-for-production-deployment
 SENTINEL_SECURITY_JWT_ALGORITHM=HS256
