--- a/sentinel_backend/pyproject.toml
+++ b/sentinel_backend/pyproject.toml
@@ -57,6 +57,7 @@ opentelemetry-api = "^1.18.0"
 opentelemetry-sdk = "^1.18.0"
 opentelemetry-exporter-jaeger = "^1.18.0"
 opentelemetry-instrumentation-fastapi = "^0.40b0"
+pika = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
