--- a/sentinel_frontend/package.json
+++ b/sentinel_frontend/package.json
@@ -4,19 +4,22 @@
   "description": "Sentinel API Testing Platform - Enhanced Reporting UI",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.8",
+    "axios": "^1.11.0",
+    "lucide-react": "^0.263.1",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.11.0",
     "recharts": "^2.5.0",
-    "lucide-react": "^0.263.1",
     "tailwindcss": "^3.1.8",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +50,10 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ]
+  }
 }
