--- a/sentinel_backend/pyproject.toml
+++ b/sentinel_backend/pyproject.toml
@@ -90,6 +90,7 @@ black = "^23.7.0"
 isort = "^5.12.0"
 flake8 = "^6.0.0"
 mypy = "^1.4.1"
+pytest-cov = "^6.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
