--- a/sentinel_backend/Dockerfile.test
+++ b/sentinel_backend/Dockerfile.test
@@ -25,6 +25,9 @@ RUN pip install --no-cache-dir \
     openai==1.54.3 \
     tiktoken==0.7.0 \
     anthropic==0.39.0 \
+    google-generativeai==0.3.0 \
+    mistralai==0.0.7 \
+    aiohttp==3.9.1 \
     pyjwt==2.8.0 \
     bcrypt==4.0.1 \
     python-multipart==0.0.6 \
@@ -51,7 +54,10 @@ RUN pip install --no-cache-dir \
     pytest-xdist \
     "httpx<0.28.0" \
     factory-boy \
-    freezegun
+    freezegun \
+    aioresponses \
+    aio-pika \
+    psutil
 
 # Create sentinel_backend directory structure
 RUN mkdir -p /app/sentinel_backend
